test/domains/dinan/assoc_domain_remove_oob.good
assoc_domain_remove_oob.chpl:4: error: halt reached - index not in domain: 5
