test/domains/dinan/assoc_domain_remove_oob.chpl
var indices: domain(int);
var elems  : [indices] real;

indices.remove(5);

writeln("indices is: ", indices);
writeln("elems is: ", elems);
